<resources>
    <string name="app_name">DentalQMgmtSys</string>
    <string name="create_account">Don\'t have an Account? <b>Sign Up</b> </string>
    <string name="login_account">Already have an account? <b>Sign In</b> </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generate_referral"><b>>  </b>Generate Referral Code</string>
    <string name="terms_condition"><b>>  </b>Terms and Conditions</string>
    <string name="about_us"><b>>  </b>About Us</string>
    <string name="contact_us"><b>>  </b>Contact Us</string>
    <string name="ico_quiz_logo">Dental Quiz Logo</string>
    <string name="appointment_schedule_title">APPOINTMENT SCHEDULE</string>
    <string name="name">Name</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="select_services">Select Services</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_time">Enter Time</string>
    <string name="enter_code">Enter Code</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="procedure">Procedure</string>
    <string name="dental_procedure">Dental procedure:</string>
    <string name="cd_previous">Previous</string>
    <string name="cd_next">Next</string>
    <string name="rule">Quiz Rules</string>
    <string name="rules1_description">
        The dental quiz game will contain 10 or more questions.
    </string>
    <string name="rules2_description">
        Every correct answer scores you 1 point.
    </string>
    <string name="rules3_description">
        Once the time runs out, it will proceed to the next question.
    </string>
    <string name="rules4_description">
        Your quiz results can be viewed after taking the quiz.
    </string>
    <string name="back">back</string>
    <string name="drInit">Dr.</string>
    <string name="dentalProd1"><i>Dental fillings </i>treat cavities or tooth decay. Also, they can repair damaged teeth.</string>
    <string name="dentalProd2"><i>Braces</i> are dental tools that help to correct problems with your teeth alignment.</string>
    <string name="dentalProd3"><i>Oral prophylaxis</i> is a procedure used to clean teeth and prevent periodontal diseases.</string>
    <string name="dentalProd4"><i>Tooth filling</i> is a type of dental restoration which repairs damage caused by tooth decay.</string>
</resources>