<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Upperbar-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/turquoise">

<!--            <ImageView-->
<!--                android:id="@+id/imageView11"-->
<!--                android:layout_width="413dp"-->
<!--                android:layout_height="255dp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.6"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:srcCompat="@drawable/ico_upper_background" />-->

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/shapewhite" />

            <TextView
                android:id="@+id/hello"
                android:layout_width="303dp"
                android:layout_height="86dp"
                android:layout_gravity="start"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:text="Hello,"
                android:fontFamily="sans-serif-condensed"
                android:textSize="27dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.168"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.38" />

            <TextView
                android:id="@+id/fnameTV"
                android:layout_width="303dp"
                android:layout_height="86dp"
                android:layout_gravity="start"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="60dp"
                android:text="NameSample"
                android:fontFamily="sans-serif-condensed"
                android:textSize="27dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.168"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.38" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="181dp"
                android:layout_height="123dp"
                android:layout_gravity="start"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="120dp"
                android:layout_marginRight="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.939"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ico_user_profile" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logoutBtn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="@drawable/textfield_background"
                android:layout_gravity="end"
                android:layout_marginTop="180dp"
                android:layout_marginRight="20dp"
                android:text="Logout"
                android:fontFamily="sans-serif-condensed"
                android:textSize="15dp"/>

        </FrameLayout>

        <!--User Details Card-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:background="@drawable/ico_appointment_background"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/editProfileTV"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="right"
                android:layout_marginTop="2dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ico_edit">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp">

                <ImageView
                    android:id="@+id/profileTV"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_outlined_person"
                    android:layout_margin="2dp"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:background="@drawable/profilecard_background"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="2dp"
                    android:background="@drawable/profilecard_background">

                    <!--Display Name-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_margin="2dp">
                        <TextView
                            android:id="@+id/first_nameTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="First Name"
                            android:textSize="18sp"
                            android:fontFamily="sans-serif-condensed"
                            android:textColor="@color/black"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="_"
                            android:visibility="invisible"
                            android:textSize="18sp"
                            android:fontFamily="sans-serif-condensed"
                            android:textColor="@color/black"/>


                        <TextView
                            android:id="@+id/last_nameTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Last Name"
                            android:textSize="18sp"
                            android:fontFamily="sans-serif-condensed"
                            android:textColor="@color/black"/>

                    </LinearLayout>


                    <!--Display Email-->

                    <!--Display Date-->
                    <TextView
                        android:id="@+id/emailTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="email@example.com"
                        android:textColor="@color/black"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/memberDateTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="**/**/**"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                    <!--Display phone-->

<!--                    <TextView-->
<!--                        android:id="@+id/contactTV"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginTop="3dp"-->
<!--                        android:text="sample number"-->
<!--                        android:fontFamily="sans-serif-condensed"-->
<!--                        android:textSize="18sp"-->
<!--                        android:textColor="@color/black"/>-->

                    <!--Display Address-->
                    <TextView
                        android:id="@+id/addressTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="House No., Street, City"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:background="@drawable/ico_appointment_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <!--                <ImageView-->
                <!--                    android:layout_width="100dp"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:src="@drawable/ic_outlined_person"-->
                <!--                    android:layout_margin="2dp"-->
                <!--                    android:background="@drawable/profilecard_background"/>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:paddingLeft="5dp">

                    <!--Other Services-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Other Services"
                        android:fontFamily="sans-serif-condensed"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <!--To referral activity-->
                    <TextView
                        android:id="@+id/referralActTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/generate_referral"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                    <!--Terms & Conditions-->
                    <TextView
                        android:id="@+id/termsconditionTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/terms_condition"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                    <!--About Us-->
                    <TextView
                        android:id="@+id/AboutUsTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/about_us"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                    <!--Contact Us-->
                    <TextView
                        android:id="@+id/ContactUsTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/contact_us"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

</FrameLayout>